# ChangeLog for xfce-base/libxfce4menu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libxfce4menu-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +libxfce4menu-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  16 Oct 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4menu-9999.ebuild:
  Removed unneeded workaround, fix is in the eclass now

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
