@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST libxfce4menu-4.5.92.tar.bz2 403765 RMD160 aaba40429622c4aaf1ec1c84cb8084e4c0d1940e SHA1 df810e883842d73f833afe13d8f2a5b7967ae17d SHA256 21a1690c4920aa515e6d3ae18a508ff80c610cd044d488936b296bc671d2150d
-EBUILD libxfce4menu-4.5.92.ebuild 478 RMD160 f440e3f3c9fb72bf821c06e673aff01b4a8a50dc SHA1 3ec170d5ea1a1c2cbf06402e0cc2443ddc6d100d SHA256 012f577a3f0add4b4d8b056c6ad721bfc34796da81fb2c9f316dbf7e13054810
-EBUILD libxfce4menu-9999.ebuild 478 RMD160 f440e3f3c9fb72bf821c06e673aff01b4a8a50dc SHA1 3ec170d5ea1a1c2cbf06402e0cc2443ddc6d100d SHA256 012f577a3f0add4b4d8b056c6ad721bfc34796da81fb2c9f316dbf7e13054810
-MISC ChangeLog 487 RMD160 e434ceb0a1451e5d73e28cea60bef655416d405a SHA1 edc45fe1d0458a72b8b849d8cb3469dd3eab1737 SHA256 af2590d47b2e2fda5134778e6635e743a787d6eb314cf4623182dcd1efd73005
+EBUILD libxfce4menu-4.5.92.ebuild 608 RMD160 302dc1873e234ae76a806a10a94385b1731396e2 SHA1 a30865f522d82eec61d4a69242e717e109f95f68 SHA256 049429c82803fe1248b71df07f45391dd0437a36f7332978ca374ed0e6088537
+EBUILD libxfce4menu-9999.ebuild 630 RMD160 ceb9a196fcd5a62e75004abb4999cffe2e0751f7 SHA1 bf5151455b67ee8b18fc74bdbd07914d2945278d SHA256 54e576715d336278c791bd121c5a64727756fda7e5e76aa0de8579557401f96b
+MISC ChangeLog 612 RMD160 a0a5b37b6a98010536d8bf9109fb47c6049cccd1 SHA1 42f6243c97c80083a3850f5c69a5b60758daeb2d SHA256 63f57bc2c02fa93243b4fd9475f74a9e242eb2411049e068f777221024471ac0
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdthwACgkQKhnDs22gwa8KegCbBKql+mc6yWtDCshYjezNdUFP
-jaEAnjjYyTG98sW+lzcQvFxqK65NFk27
-=DMJ3
+iEYEARECAAYFAklK3QMACgkQKhnDs22gwa/eLwCgiaOKRwW/jbvX5KgdGCjwoYU3
+m7YAnil7gT10uXmErWOzsZEtI7PFw0n2
+=oDSP
 -----END PGP SIGNATURE-----
