@@ -11,10 +11,19 @@ xfce4_core
 DESCRIPTION="Desktop menu library"
 HOMEPAGE="http://www.xfce.org/projects/libraries"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="debug"
+IUSE="debug doc"
 
 RDEPEND=">=dev-libs/glib-2.6:2
 	>=x11-libs/gtk+-2.6:2
 	>=xfce-base/libxfce4util-${XFCE_VERSION}"
+DEPEND="${RDEPEND}
+	dev-util/intltool
+	doc? ( dev-util/gtk-doc )"
+
+WANT_GTKDOCIZE="yes"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk-doc)"
+}
 
 DOCS="AUTHORS ChangeLog NEWS README THANKS TODO"
